--- a/BD/ejer1-board/views/detalle.html
+++ b/BD/ejer1-board/views/detalle.html
@@ -5,7 +5,7 @@
         
         <h3 class="text-center mb-4">{{trip.name}}</h3>
         
-        <img src="/uploads/{{trip.image}}" id="imagen" class="img-fluid rounded shadow-sm mx-auto d-block mb-4" alt="{{trip.name}}">
+        <img src="/trip/{{trip._id}}/image" id="imagen" class="img-fluid ..." alt="{{trip.name}}">
         
         <ul class="list-unstyled text-center mb-4">
             {{! --- CORREGIDO: Usando variables de la BBDD --- }}
