--- a/BD/ejer1-board/views/main.html
+++ b/BD/ejer1-board/views/main.html
@@ -50,7 +50,7 @@
         {{#trips}}
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card h-100 shadow-sm">
-                <img src="/uploads/{{image}}" class="card-img-top" alt="{{name}}">
+                <img src="/trip/{{_id}}/image" class="card-img-top" alt="{{name}}">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{name}}</h5>
                     <p class="card-text flex-grow-1">{{description}}...</p>
