--- a/BD/ejer1-board/views/new_travel.html
+++ b/BD/ejer1-board/views/new_travel.html
@@ -62,9 +62,9 @@
             <label for="t_trip">Type of trip:</label>
             <select id="t_trip" name="t_trip" required>
                 <option value="">Select a type</option>
-                <option value="family" {{#formData.t_trip.family}}selected{{/formData.t_trip.family}}>Family</option>
-                <option value="leisure" {{#formData.t_trip.leisure}}selected{{/formData.t_trip.leisure}}>Leisure</option>
-                <option value="cultural" {{#formData.t_trip.cultural}}selected{{/formData.t_trip.cultural}}>Cultural</option>
+                <option value="Adventure" {{#formData.t_trip.adventure}}selected{{/formData.t_trip.adventure}}>Adventure</option>
+                <option value="Culture" {{#formData.t_trip.culture}}selected{{/formData.t_trip.culture}}>Culture</option>
+                <option value="Relax" {{#formData.t_trip.relax}}selected{{/formData.t_trip.relax}}>Relax</option>
             </select>
 
             <div class="checkbox-group">
