--- a/BD/ejer1-board/views/new_travel.html
+++ b/BD/ejer1-board/views/new_travel.html
@@ -73,9 +73,9 @@
                                 <label for="t_trip" class="form-label fw-bold">Type of trip</label>
                                 <select class="form-select" id="t_trip" name="t_trip" required>
                                     <option value="">Select a type</option>
-                                    <option value="Ádventure" {{#formData.t_trip.family}}selected{{/formData.t_trip.family}}>Family</option>
-                                    <option value="Culture" {{#formData.t_trip.leisure}}selected{{/formData.t_trip.leisure}}>Leisure</option>
-                                    <option value="Relax" {{#formData.t_trip.cultural}}selected{{/formData.t_trip.cultural}}>Cultural</option>
+                                    <option value="family" {{#formData.t_trip.family}}selected{{/formData.t_trip.family}}>Family</option>
+                                    <option value="leisure" {{#formData.t_trip.leisure}}selected{{/formData.t_trip.leisure}}>Leisure</option>
+                                    <option value="cultural" {{#formData.t_trip.cultural}}selected{{/formData.t_trip.cultural}}>Cultural</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
