--- a/BD/GoTravel/views/detalle.html
+++ b/BD/GoTravel/views/detalle.html
@@ -156,79 +156,6 @@
     </div>
 </div>
 
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-    
-        const confirmDeleteBtn = document.getElementById('confirmDeleteBtn');
-        const deleteTriggerBtn = document.getElementById('btnDeleteTrigger');
-
-        if (confirmDeleteBtn && deleteTriggerBtn) {
-            
-            
-            let tripIdToDelete = null;
-
-            deleteTriggerBtn.addEventListener('click', function() {
-             
-                tripIdToDelete = this.getAttribute('data-id'); 
-            });
-
-
-            confirmDeleteBtn.addEventListener('click', async function(e) {
-                e.preventDefault(); 
-                
-                const idViaje = tripIdToDelete;
-
-                if (!idViaje) {
-                    alert("This trip does not exist.");
-                    
-                    const modalInstance = bootstrap.Modal.getInstance(document.getElementById('deleteTripModal'));
-                    if (modalInstance) modalInstance.hide();
-                    return;
-                }
-
-                
-                const modalElement = document.getElementById('deleteTripModal');
-                const modalInstance = bootstrap.Modal.getInstance(modalElement);
-                if (modalInstance) modalInstance.hide();
-
-
-               
-                const loader = document.getElementById('loadingSpinner');
-                if (loader) loader.style.display = 'flex';
-                this.disabled = true; 
-                try {
-                   
-                    const response = await fetch(`/delete/trip/${idViaje}`, {
-                        method: 'DELETE',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        }
-                    });
-
-                    if (!response.ok) {
-                        const errorData = await response.json().catch(() => ({})); 
-                        throw new Error(errorData.message || "Error processing request");
-                    }
-
-                   
-                    window.location.href = '/';
-
-                } catch (error) {
-                  
-                    if (loader) loader.style.display = 'none';
-                    this.disabled = false;
-                    
-                    const errorModalBody = document.getElementById('errorModalBody');
-                    if(errorModalBody) errorModalBody.textContent = "An error occurred during deletion: " + error.message;
-                    
-                    const errorModal = new bootstrap.Modal(document.getElementById('errorModal'));
-                    errorModal.show();
-
-                    if (deleteTriggerBtn) deleteTriggerBtn.disabled = false;
-                }
-            });
-        }
-    });
-</script>
+<script src="/js/script.js"></script>
 
 {{> footer}}
